fix: Input now works on safari

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -3,6 +3,11 @@
     user-select: none;
 }
 
+input, textarea {
+    -webkit-user-select: text;
+    user-select: text;
+}
+
 body > footer {
     position: fixed;
     bottom: 10px;
